css/style.css
* {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body,
html {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

body {
    background-color: #6f4e37;
}

.card {
    background-color: #77DAAE;
}

.btn-custom {
    background-color: #FFFFFF;
    box-shadow: white;
}

.btn-custom:hover,
.btn-custom:active {
    background-color: #6f4e37;
    color: white;
    outline: none;
}

.btn-custom:focus {
    box-shadow: none;
}

@keyframes fadeinout {

    0%,
    100% {
        opacity: 0;
    }

    50% {
        opacity: 1;
    }
}

#tick {
    animation: fadeinout 2.25s linear;
}

@media only screen and (max-width: 600px) {
    .btn-custom {
        font-size: 14px;
        padding: 5px 10px;
    }
}

